--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -20,6 +20,6 @@
   }
 
   [role="tabpanel"] {
-    @apply text-sm outline-none;
+    @apply mt-6 text-sm outline-none;
   }
 }
